--- a/travel.css
+++ b/travel.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #613131;
+    /* background-color: #613131; */
     line-height: 1.6;
 }
 
