--- a/travel.css
+++ b/travel.css
@@ -40,7 +40,7 @@ header nav ul li a:hover {
 }
 
 .hero {
-    background-image: url('https://via.placeholder.com/1200x600');
+    background-image: url('image/img.11.jpg');
     background-size: cover;
     background-position: center;
     height: 600px;
